// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todos reducers should add todos 1`] = `
Object {
  "data": Object {
    "entities": Object {
      "0.1": Object {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.1,
        "text": "Learn Angular",
      },
      "0.2": Object {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.2,
        "text": "Learn NgRx",
      },
    },
    "ids": Array [
      0.1,
      0.2,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should clear completed todos 1`] = `
Object {
  "data": Object {
    "entities": Object {
      "0.03": Object {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.03,
        "text": "Learn Jest",
      },
    },
    "ids": Array [
      0.03,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should delete todos 1`] = `
Object {
  "data": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "loading": false,
}
`;

exports[`todos reducers should load todos 1`] = `
Object {
  "data": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "loading": true,
}
`;

exports[`todos reducers should load todos 2`] = `
Object {
  "data": Object {
    "entities": Object {
      "0.234567891": Object {
        "completed": true,
        "creationDate": 2020-02-01T00:00:00.000Z,
        "id": 0.234567891,
        "text": "Learn Angular",
      },
      "0.345678912": Object {
        "completed": false,
        "creationDate": 2020-03-01T00:00:00.000Z,
        "id": 0.345678912,
        "text": "Learn Jest",
      },
    },
    "ids": Array [
      0.234567891,
      0.345678912,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should mark todos as complete 1`] = `
Object {
  "data": Object {
    "entities": Object {
      "0.07": Object {
        "completed": true,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.07,
        "text": "Learn Jest",
      },
    },
    "ids": Array [
      0.07,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should update todos 1`] = `
Object {
  "data": Object {
    "entities": Object {
      "0.07": Object {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.07,
        "text": "Learn Angular",
      },
    },
    "ids": Array [
      0.07,
    ],
  },
  "loading": false,
}
`;
